added delete from storeresults to counter with some styling

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,17 @@
 .App-link {
   color: #61dafb;
 }
+.resultsListItem{
+
+
+}
+.resultsListItem::after {
+  background: #94f794;
+  cursor:pointer;
+  margin-left:50px;
+  content: "X";
+  padding:2px;
+}
 
 @keyframes App-logo-spin {
   from {
