--- a/src/components/CounterOutput/CounterOutput.css
+++ b/src/components/CounterOutput/CounterOutput.css
@@ -1,6 +1,6 @@
 .CounterOutput {
     width: 100%;
-    background-color: lightgreen;
+    background-color: green;
     color: white;
     font-size: 1.8rem;
     text-align: center;
